test: add unit tests for TaskServiceImpl with enhanced data realism and coverage